# DOS68k

./: .dockerignore  .env.database.template  .env.langfuse.template  .env.localstack.template  .env.storage.template  .env.template  .gitignore  .minio.env.template  CODE_OF_CONDUCT.md  COMMUNITY_GUIDELINES.md  CONTEXT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  compose-remote.yaml  compose.yaml
chatbot-api/: .env.template  .gitignore  Dockerfile  README.md  chatbot-api-openapi.json  licenses.json  main.py  pyproject.toml
chatbot-api/docs/: CONFIGURATION.md  INTEGRATION.md
chatbot-api/scripts/: populate_vector_db.py
chatbot-api/scripts/tool_config/: borgonero-fc.yaml  software-dev.yaml  zephyr-corp.yaml
chatbot-api/src/: db.py  env.py  main.py
chatbot-api/src/modules/: auth.py  env.py  settings.py  utils.py
chatbot-api/src/modules/chatbot/: __init__.py  agent.py  agent.yaml  agents.py  chatbot.py  config_hash.py  env.py  models.py  structured_outputs.py  tools.py  vector_index.py  version.py
chatbot-api/src/modules/health/: controller.py
chatbot-api/src/modules/queries/: __init__.py  controller.py  dto.py  env.py  repository.py  service.py
chatbot-api/src/modules/sessions/: __init__.py  controller.py  dto.py  env.py  repository.py  service.py
chatbot-api/src/routers/: health.py
chatbot-api/test/: conftest.py  mocks.py  test_main.py
chatbot-api/test/modules/chatbot/: chatbot_env_test.py  chatbot_models_test.py  chatbot_test.py  mocks.py
chatbot-api/test/modules/health/: health_controller_test.py
chatbot-api/test/modules/queries/: mocks.py  query_controller_test.py  query_repository_test.py  query_service_test.py
chatbot-api/test/modules/sessions/: mocks.py  session_controller_test.py  session_repository_test.py  session_service_test.py
chatbot-api/test/routers/: test_health_router.py
chatbot-evaluate/api/: .dockerignore  .env.template  Dockerfile  README.md  licenses.json  pyproject.toml
chatbot-evaluate/api/src/: env.py  main.py  queue.py
chatbot-evaluate/api/src/modules/: auth.py
chatbot-evaluate/api/src/routers/: health.py
chatbot-evaluate/api/test/: conftest.py  mocks.py  test_main.py
chatbot-evaluate/api/test/routers/: mocks.py  test_health_router.py
chatbot-evaluate/worker/: .env.template  Dockerfile  README.md  licenses.json  pyproject.toml
chatbot-evaluate/worker/src/worker/: env.py  evaluator.py  main.py  models.py  task.py
chatbot-evaluate/worker/test/: conftest.py  evaluator_test.py  main_test.py  mocks.py  models_test.py  task_test.py
dos-utility/: .gitignore  README.md  Taskfile.yaml  licenses.json  pyproject.toml
dos-utility/docs/: features.md
dos-utility/docs/auth/: auth.md  auth_interface.md
dos-utility/docs/database/nosql/: nosql.md  nosql_interface.md
dos-utility/docs/database/sql/: sql.md
dos-utility/docs/queue/: queue.md  queue_interface.md
dos-utility/docs/storage/: storage.md  storage_interface.md
dos-utility/docs/vector_db/: vector_db.md  vector_db_interface.md
dos-utility/src/dos_utility/: __init__.py
dos-utility/src/dos_utility/agent/: __init__.py  env.py  exceptions.py  interface.py  models.py
dos-utility/src/dos_utility/auth/: __init__.py  dependency.py  env.py  exceptions.py  interface.py
dos-utility/src/dos_utility/queue/: __init__.py  env.py  interface.py
dos-utility/src/dos_utility/storage/: __init__.py  env.py  interface.py
dos-utility/src/dos_utility/tracing/: __init__.py  env.py  exceptions.py  instrumentation.py  interface.py  models.py
dos-utility/src/dos_utility/types/: models.py
dos-utility/src/dos_utility/utils/: logger.py
dos-utility/src/dos_utility/vector_db/: __init__.py  env.py  exceptions.py  interface.py
dos-utility/test/: conftest.py  init_test.py  mocks.py
dos-utility/test/agent/: agent_env_test.py  agent_models_test.py  agent_test.py  conftest.py  llamaindex_google_test.py  llamaindex_openai_test.py  mocks.py
dos-utility/test/auth/: auth_env_test.py  auth_test.py  dependency_test.py  exceptions_test.py  mocks.py
dos-utility/test/auth/aws/: aws_auth_env_test.py  aws_auth_implementation_test.py  mocks.py
dos-utility/test/auth/local/: local_auth_implementation_test.py  mocks.py
dos-utility/test/database/nosql/: mocks.py  nosql_env_test.py  nosql_test.py
dos-utility/test/database/sql/: connection_test.py  db_connection_test.py  mocks.py
dos-utility/test/queue/: interface_test.py  mocks.py  queue_env_test.py  queue_test.py
dos-utility/test/queue/redis/: connection_test.py  mocks.py  redis_connection_test.py  redis_env_test.py  redis_implementation_test.py  redis_queue_env_test.py  redis_queue_implementation_test.py
dos-utility/test/queue/sqs/: mocks.py  sqs_env_test.py  sqs_implementation_test.py  sqs_queue_env_test.py  sqs_queue_implementation_test.py
dos-utility/test/storage/: mocks.py  storage_env_test.py  storage_test.py
dos-utility/test/storage/aws/: aws_env_test.py  aws_implementation_test.py  aws_storage_env_test.py  aws_storage_implementation_test.py  mocks.py  s3_test.py
dos-utility/test/storage/minio/: minio_env_test.py  minio_implementation_test.py  minio_storage_env_test.py  minio_storage_implementation_test.py  mocks.py
dos-utility/test/tracing/: instrumentation_test.py  mocks.py  tracing_env_test.py  tracing_test.py
dos-utility/test/utils/aws/: aws_utils_env_test.py  mocks.py
dos-utility/test/utils/redis/: mocks.py  redis_utils_connection_test.py  redis_utils_env_test.py
dos-utility/test/vector_db/: mocks.py  vector_db_env_test.py  vector_db_test.py
dos-utility/test/vector_db/qdrant/: mocks.py  qdrant_vector_db_env_test.py  qdrant_vector_db_implementation_test.py
dos-utility/test/vector_db/redis/: mocks.py  redis_vector_db_implementation_test.py
masking/: Dockerfile  README.md  pyproject.toml
masking/src/: main.py
masking/src/modules/health/: __init__.py  controller.py
masking/src/modules/mask/: __init__.py  controller.py  dto.py  presidio.py  service.py
masking/test/: conftest.py
masking/test/modules/health/: test_health_controller.py
masking/test/modules/mask/: mocks.py  test_dto.py  (+3 more)
(+263 files in other folders)
