[project]
name = "chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LLM/agent abstraction (`llamaindex-google` ships the LlamaIndex + Google GenAI provider).
    # Tracing ships the Langfuse instrumentation. Pull the extras you need from dos-utility
    # rather than depending on LLM SDKs directly here.
    "dos-utility[tracing,llamaindex-google]",
    "fastapi[standard]>=0.128.0",
    "nh3>=0.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    # uuid7 is built-in only from Python 3.14+; use backport on 3.13
    "uuid6>=2022.10.25",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pip-licenses>=5.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "questionary>=2.0.1",
    "rich>=13.7.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env_files = [".env.test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
dos-utility = { path = "../dos-utility" }


