[project]
name = "dos-utility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luca Scopelliti BID", email = "luca.scopelliti@bidcompany.it" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.28",
    "minio>=7.2.20",
    "pydantic-settings>=2.12.0",
    "pytest-asyncio>=1.3.0",
    "qdrant-client>=1.16.2",
    "redis[hiredis]>=7.1.0",
    "redisvl>=0.13.2",
    "sqlalchemy[asyncio]>=2.0.45",
]

[project.scripts]
dos-utility = "dos_utility:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pydoc-markdown>=4.8.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
