[project]
name = "dos-utility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luca Scopelliti BID", email = "luca.scopelliti@bidcompany.it" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "requests>=2.32.3",
    "boto3>=1.42.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.28",
    "minio>=7.2.20",
    "pydantic-settings>=2.12.0",
    "pytest-asyncio>=1.3.0",
    "qdrant-client>=1.16.2",
    "redis[hiredis]>=7.1.0",
    "redisvl>=0.13.2",
    "sqlalchemy[asyncio]>=2.0.45",
    "redis[hiredis]>=5.0.4",
]

[project.scripts]
dos-utility = "dos_utility:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dos_utility"]

[dependency-groups]
dev = [
    "pydoc-markdown>=4.8.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.6"
]
