[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "dos-utility",
    "presidio-analyzer>=2.2.361",
    "presidio-anonymizer>=2.2.361",
    "langdetect>=1.0.9",
    "pyyaml>=6.0.3",
    "spacy>=3.8.11",
    "pip>=26.0.1",
]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
dos-utility = { path = "../dos-utility" }
