[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luca Scopelliti BID", email = "luca.scopelliti@bidcompany.it" }
]
requires-python = ">=3.13"
dependencies = [
    "dos-utility",
]

[project.scripts]
worker = "src:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pip-licenses>=5.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
dos-utility = { path = "../../dos-utility" }
